v 2.0.7 patch file - edit POM and Dockerfile